Fix Organize collection folder deletion going 'too far'

BUG: 314348
FIXED-IN: 2.8